--- a/IS 403 Project2/IS 403 Project2.csproj
+++ b/IS 403 Project2/IS 403 Project2.csproj
@@ -204,7 +204,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MissionQuestions.cs" />
-    <Compile Include="Models\Missions.cs" />
+    <Compile Include="Models\Mission.cs" />
     <Compile Include="Models\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
