--- a/IS 403 Project2/Web.config
+++ b/IS 403 Project2/Web.config
@@ -13,7 +13,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-IS 403 Project2-20181211050235.mdf&quot;;Initial Catalog=&quot;aspnet-IS 403 Project2-20181211050235&quot;;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="MissionContext" connectionString="Data Source=intexfall2-10.database.windows.net;Initial Catalog=LDSMissions;User ID=intex;Password=********;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <add name="MissionContext" connectionString="Data Source=intexfall2-10.database.windows.net;Initial Catalog=LDSMissions;User ID=intex;Password=Drexeffect!;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
